--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,12 +23,16 @@
   <body>
 
 <!--Padding-->
-    <div class="padding"></div>
+
+<div class="padding"></div>
+<div class="padding"></div>
+
 <!--Padding-->
 
 <!--Nav Bar Start-->
       <div class="container">
         <div class="header">EH PHOTOGRAPHY</div>
+        <div class="padding"></div>
         <ol class="breadcrumb">
           <li><div class="bar-text"><a href="index.html">PHOTOGRAPHY</a></div></li>
           <li><a href="about.html">ABOUT</a></li>
@@ -38,55 +43,35 @@
       </div>
 <!--Nav Bar End-->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!--About Start-->     
 
 <div class="container">
   <h1>About</h1>
     <p>Evan Hindes is currently a student at Washington University in St. Louis. She is in her last year of the Olin Business School with a joint concentration in Marketing and International Business. While she was studying abroad at Universidad Carlos III in Madrid, Spain during the spring semester of her junior year, Evan had the opportunity to travel all over Europe and photograph the amazing sights around her. Using both her iPhone and Canon digital camera, her new passion for landscape photography became apparent the more she traveled. When she returned from her five months of adventure, she soon realized that she had taken thousands of photographs, mostly of the nature, landscapes and monuments in her everyday tours of cities. Now, Evan is both showcasing her photogrophy online and providing her photography services as she propels her career and passion.</p>
     <br>
-    <p><b>Book Evan for your next event //</b> Peruse the site and email or call Evan to discuss your booking. She would be happy to photograph your next event or take commissioned photography of your property or desired landscape. Individual photography prices vary by event, location and need. Evan is based in Central New Jersey and St. Louis.</p>
+    <p><b><i>Book Evan for your next event   //</i></b>   Peruse the site and email Evan to discuss your booking. She would be happy to photograph your next event or take commissioned photography of your property or desired landscape. Individual photography prices vary by event, location and need. Evan is based in Central New Jersey and St. Louis.</p>
 </div>
 <!--About End-->
 
-<div class="padding"></div>
 <div class="padding"></div>
                 
 <!--Bottom Border Start-->
       <div class="container">
         <ol class="breadcrumb">
 
-          <li><div class="bar-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                <a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
+          <li><div class="bar-text"><a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
 
-          <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-                <a href="#phone" data-toggle="modal" data-target="#myModalPHONE">     PHONE</a></li>
 
-                  <!--Phone Modal Start-->
-                    <a id="phone"></a>
-                      <div class="modal fade" id="myModalPHONE" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                              <h4 class="modal-title" id="myModalLabel">(908) 377-9110</h4>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  <!--Phone Modal End-->
+          <li><a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
 
-          <li><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
-                <a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
-
-          <li><span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-                <a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
+          <li><a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
 
         </ol>
       </div>
 <!--Bottom Border End-->
+
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
