--- a/bookings.html
+++ b/bookings.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,12 +23,16 @@
   <body>
 
 <!--Padding-->
-    <div class="padding"></div>
+
+<div class="padding"></div>
+<div class="padding"></div>
+
 <!--Padding-->
 
 <!--Nav Bar Start-->
       <div class="container">
         <div class="header">EH PHOTOGRAPHY</div>
+        <div class="padding"></div>
         <ol class="breadcrumb">
           <li><div class="bar-text"><a href="index.html">PHOTOGRAPHY</a></div></li>
           <li><a href="about.html">ABOUT</a></li>
@@ -38,20 +43,16 @@
       </div>
 <!--Nav Bar End-->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!--About Start-->     
 
 <div class="container">
   <h1>Bookings</h1>
-  <p>Interested in scheduling a booking with EH Photography? We are available for events and commissioned landscape shoots. Check our calendar below for our availability. Send us an <a href="mailto:erhindes@gmail.com?subject=Booking with EH Photography!" target="_top">email</a> to learn more, or fill out the form below!</p>
-  <p><iframe src="https://www.google.com/calendar/embed?height=450&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=erhindes%40gmail.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style=" border-width:0 " width="600" height="450" frameborder="0" scrolling="no"></iframe></p>
+  <p>Interested in scheduling a booking with EH Photography? We are available for events and commissioned landscape shoots. Send us an <b><i><a href="mailto:erhindes@gmail.com?subject=Booking with EH Photography!" target="_top">email</a></i></b>  to learn more, or fill out the form below. We are looking forward to working with you!</p>
+  <div class="padding"></div>
 
   <p><div id="wufoo-m8u1hrw0ayvx7t">
     Fill out my <a href="https://ehindes.wufoo.com/forms/m8u1hrw0ayvx7t">online form</a>.
     </div>
-    <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Online contact and registration forms from <a href="http://www.wufoo.com">Wufoo</a>.</div>
     <script type="text/javascript">var m8u1hrw0ayvx7t;(function(d, t) {
     var s = d.createElement(t), options = {
     'userName':'ehindes',
@@ -73,41 +74,23 @@
 <!--About End-->
 
 <div class="padding"></div>
-<div class="padding"></div>
                 
 <!--Bottom Border Start-->
       <div class="container">
         <ol class="breadcrumb">
 
-          <li><div class="bar-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                <a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
+          <li><a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
 
-          <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-                <a href="#phone" data-toggle="modal" data-target="#myModalPHONE">     PHONE</a></li>
+          <li><a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
 
-                  <!--Phone Modal Start-->
-                    <a id="phone"></a>
-                      <div class="modal fade" id="myModalPHONE" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                              <h4 class="modal-title" id="myModalLabel">(908) 377-9110</h4>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  <!--Phone Modal End-->
-
-          <li><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
-                <a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
-
-          <li><span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-                <a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
+          <li><a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
 
         </ol>
       </div>
 <!--Bottom Border End-->
+
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
