--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
   <body>
 
 <!--Padding-->
-    <div class="padding"></div>
+
+<div class="padding"></div>
+<div class="padding"></div>
+
 <!--Padding-->
 
 <!--Nav Bar Start-->
       <div class="container">
         <div class="header">EH PHOTOGRAPHY</div>
+        <div class="padding"></div>
         <ol class="breadcrumb">
           <li><div class="bar-text"><a href="index.html">PHOTOGRAPHY</a></div></li>
           <li><a href="about.html">ABOUT</a></li>
@@ -39,7 +43,6 @@
       </div>
 <!--Nav Bar End-->
 
-<div class="padding"></div>
 <div class="padding"></div>
 
 <!--Photography Start-->     
@@ -109,7 +112,8 @@
                   </div>
                 <div class="modal-footer">Last March Evan traveled by ferry from Tarifa, Spain to Tangier, Morocco, as well as visiting Asilah on the coast. During the trip, she saw the Hercules Cave, rode a camel, explored the medina and admired the view of the south of Spain across the Strait of Gibraltar.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -229,7 +233,8 @@
                   </div>
                 <div class="modal-footer">Evan lived and studied in the heart of Madrid, Spain for five months. During her time living in the country, she traveled all over the country. She spent two weeks in the south of Spain in Seville and Granda. Outside of Madrid, Evan toured the former capital Toledo and hiked in Cercedilla. As well, she headed north to visit Donostia-San Sebastian in Basque country and Barcelona in Catalonia.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -309,7 +314,8 @@
                   </div>
                 <div class="modal-footer">Within Italy, Evan ventured to Florence and Rome to visit with friends. In Florence, Evan wandered through vintage stores and ate endless pasta. While in Rome, she toured all of the major attractions, traveled outside the city to the Tivoli Gardens and made her way to Easter Mass in Vatican City with Pope Francis.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -393,7 +399,8 @@
                   </div>
                 <div class="modal-footer">Evan spent five days extensively exploring the famous, and beautiful, island of Santorini. She drove to Fira to see the port and Oia, just for the famous sunset. She saw the black, red and white sand beaches and even took a day trip by boat to nearby islands Nea Kameni and Palea Kameni to see a volcano and hot springs. More importantly, she ate tens of different types of pastries and baked goods from nearby bakeries.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -473,7 +480,8 @@
                   </div>
                 <div class="modal-footer">While with her family, Evan only spent a long weekend exploring Paris, but she made sure to see all the major attractions. She ventured everywhere from the Palace of Versailles to Pont des Arts to Le Marais to the Sacre-Coeur.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -549,7 +557,8 @@
                   </div>
                 <div class="modal-footer">While in Belgium, Evan had the opportunity to photography both Brussels and Bruges. She spent four days not only attending a conference on the European Union, but also searching for the best Belgian waffle. All the while, Evan was snapping pictures of the beautiful capital of the European Union and the quaint scenery of Brussels.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -625,7 +634,8 @@
                   </div>
                 <div class="modal-footer">Evan spent several days in London with friends exploring the city and major sights including Tower Bridge, Buckingham Palace, Big Ben and the London Eye. But she mostly she ate her way across the city, visiting everywhere from Chinatown to Borough Market to Harrods.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -697,7 +707,8 @@
                   </div>
                 <div class="modal-footer">While in Ireland, Evan ventured not only to Dublin to see the sights but also to Howth, which is a little town outside of Dublin. It was perfect for a 10K hike complete with beautiful views of the coast.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -781,7 +792,8 @@
                   </div>
                 <div class="modal-footer">While in Switzerland, Evan ventured to both Zurich and the beautiful Lucerne. In Lucerne, Evan and her friends hiked Mount Pilatus in the Swiss Alps and hung out alongside the scenic Lake Lucerne.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -877,7 +889,8 @@
                   </div>
                 <div class="modal-footer">Evan took two separate trips to Germany. First, she went to historic Berlin to see Checkpoint Charlie, the Brandenburg Tor and the Reichstag and to grow her understanding of the Holocaust. On her second trip, she visited Munich, the famous Neuschwanstein Castle outside of Munich in Schwangau and the Dachau Concentration Camp. And, of course, she got to experience the famous Hippodrome in Munich during Springfest.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -957,7 +970,8 @@
                   </div>
                 <div class="modal-footer">While in Austria, Evan traveled from Salzburg and Halstatt to Vienna. She drove with her friends on the Austrian autobahn to see the lake district, and UNESCO World Heritage Site, in Halstatt. They took a bike tour across Salzburg, and she sat in coffee shops in Vienna.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -1033,7 +1047,8 @@
                   </div>
                 <div class="modal-footer">In the Czech Republic, Evan went to Prague to see the sights, and she ventured outside the city to Kutna Hora and the Terezin Concentration Camp.</div>
 
-                <a class="btn btn-default" href="prints.html" role="button">Get Prints!</a>
+                <div align="center"><a class="btn btn-default" href="prints.html" role="button">Get Prints!</a></div>
+                <div class="padding"></div>
 
               </div>
             </div>
@@ -1050,29 +1065,12 @@
 <!--Photography End-->
 
 <div class="padding"></div>
-<div class="padding"></div>
                 
 <!--Bottom Border Start-->
       <div class="container">
         <ol class="breadcrumb">
 
           <li><div class="bar-text"><a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
-
-          <li><a href="#phone" data-toggle="modal" data-target="#myModalPHONE">     PHONE</a></li>
-
-                  <!--Phone Modal Start-->
-                    <a id="phone"></a>
-                      <div class="modal fade" id="myModalPHONE" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                              <h4 class="modal-title" id="myModalLabel">(908) 377-9110</h4>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  <!--Phone Modal End-->
 
           <li><a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
 
@@ -1082,6 +1080,8 @@
       </div>
 <!--Bottom Border End-->
 
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
