--- a/prints.html
+++ b/prints.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,12 +23,16 @@
   <body>
 
 <!--Padding-->
-    <div class="padding"></div>
+
+<div class="padding"></div>
+<div class="padding"></div>
+
 <!--Padding-->
 
 <!--Nav Bar Start-->
       <div class="container">
         <div class="header">EH PHOTOGRAPHY</div>
+        <div class="padding"></div>
         <ol class="breadcrumb">
           <li><div class="bar-text"><a href="index.html">PHOTOGRAPHY</a></div></li>
           <li><a href="about.html">ABOUT</a></li>
@@ -38,18 +43,17 @@
       </div>
 <!--Nav Bar End-->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!--About Start-->     
 
 <div class="container">
   <h1>Prints</h1>
+  <p>Click below to order prints! Please select one or more albums to be purchased. Prints are only available for purchase by album. Images on the home page are printed in a square of 4 x 4. All photos within the album are 5 x 7. Additionally, EH Photography only prints images larger than 5 x 7 by special request. Please select below if you would like to inquire about a special order. We will email you about your request.</p>
+  <div class="padding"></div>
   <p>
     <div id="wufoo-q1ls1ufd1uq9984">
     Fill out my <a href="https://ehindes.wufoo.com/forms/q1ls1ufd1uq9984">online form</a>.
     </div>
-    <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">The easy to use <a href="http://www.wufoo.com/form-builder/">Wufoo form builder</a> helps you make forms easy, fast, and fun.</div>
+    
     <script type="text/javascript">var q1ls1ufd1uq9984;(function(d, t) {
     var s = d.createElement(t), options = {
     'userName':'ehindes',
@@ -72,41 +76,23 @@
 <!--About End-->
 
 <div class="padding"></div>
-<div class="padding"></div>
                 
 <!--Bottom Border Start-->
       <div class="container">
         <ol class="breadcrumb">
 
-          <li><div class="bar-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                <a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
+          <li><a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
 
-          <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-                <a href="#phone" data-toggle="modal" data-target="#myModalPHONE">     PHONE</a></li>
+          <li><a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
 
-                  <!--Phone Modal Start-->
-                    <a id="phone"></a>
-                      <div class="modal fade" id="myModalPHONE" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                              <h4 class="modal-title" id="myModalLabel">(908) 377-9110</h4>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  <!--Phone Modal End-->
-
-          <li><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
-                <a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
-
-          <li><span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-                <a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
+          <li><a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
 
         </ol>
       </div>
 <!--Bottom Border End-->
+
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
