--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,12 +23,16 @@
   <body>
 
 <!--Padding-->
-    <div class="padding"></div>
+
+<div class="padding"></div>
+<div class="padding"></div>
+
 <!--Padding-->
 
 <!--Nav Bar Start-->
       <div class="container">
         <div class="header">EH PHOTOGRAPHY</div>
+        <div class="padding"></div>
         <ol class="breadcrumb">
           <li><div class="bar-text"><a href="index.html">PHOTOGRAPHY</a></div></li>
           <li><a href="about.html">ABOUT</a></li>
@@ -45,15 +50,13 @@
 
   <!--Resume Heading Start-->
 <div class="container">
-  <div class="header">
     <header>
-      <div class="name-title">EVAN R. HINDES</div>
+      <div class="second-header">EVAN R. HINDES</div>
       <p>evan.hindes@wustl.edu // 908.377.9110<br>Current Address // 6805 Washington Ave, 1E // St. Louis, MO 63130<br>Permanent Address // 19 Azalea Trail // Westfield, NJ 07090</p>
     </header>
   <!--Resume Heading End-->
 
   <div class="padding"></div>
-
 
   <!--Resume Education Start-->
   <div class="education">
@@ -144,41 +147,23 @@
 <!--Resume End-->
 
 <div class="padding"></div>
-<div class="padding"></div>
                 
 <!--Bottom Border Start-->
       <div class="container">
         <ol class="breadcrumb">
 
-          <li><div class="bar-text"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                <a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
+          <li><a href="mailto:erhindes@gmail.com?subject=Hello!" target="_top">     EMAIL</a></li>
 
-          <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-                <a href="#phone" data-toggle="modal" data-target="#myModalPHONE">     PHONE</a></li>
+          <li><a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
 
-                  <!--Phone Modal Start-->
-                    <a id="phone"></a>
-                      <div class="modal fade" id="myModalPHONE" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                              <h4 class="modal-title" id="myModalLabel">(908) 377-9110</h4>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  <!--Phone Modal End-->
-
-          <li><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
-                <a href="https://instagram.com/ehindes/">     INSTAGRAM</a></li>
-
-          <li><span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-                <a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
+          <li><a href="https://www.linkedin.com/pub/evan-hindes/5a/845/616">     LINKEDIN</a></li>
 
         </ol>
       </div>
 <!--Bottom Border End-->
+
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
