--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,6 @@
 <!--Nav Bar End-->
 
 <div class="padding"></div>
-<div class="padding"></div>
 
 <!--Resume Start-->
 
@@ -52,7 +51,7 @@
 <div class="container">
     <header>
       <div class="second-header">EVAN R. HINDES</div>
-      <p>evan.hindes@wustl.edu // 908.377.9110<br>Current Address // 6805 Washington Ave, 1E // St. Louis, MO 63130<br>Permanent Address // 19 Azalea Trail // Westfield, NJ 07090</p>
+      <div class="text">evan.hindes@wustl.edu // 908.377.9110<br>Current Address // 6805 Washington Ave, 1E // St. Louis, MO 63130<br>Permanent Address // 19 Azalea Trail // Westfield, NJ 07090</div>
     </header>
   <!--Resume Heading End-->
 
@@ -61,16 +60,17 @@
   <!--Resume Education Start-->
   <div class="education">
     <div class="second-header">EDUCATION</div>
-      <div class="job-header">WASHINGTON UNIVERSITY IN ST. LOUIS, OLIN BUSINESS SCHOOL // St. Louis, MO<br>Bachelor of Science in Business Administration<br>Majors // Marketing and International Business, Minor // Spanish<br>May 2015</div>
-          <ul>
-            <li>Overall GPA: 3.63/4.00</li>
-            <li>Dean's List</li>
-          </ul>
+      <div class="job-header">WASHINGTON UNIVERSITY IN ST. LOUIS, OLIN BUSINESS SCHOOL // St. Louis, MO</div>
+      <div class="text">Bachelor of Science in Business Administration<br>Majors // Marketing and International Business, Minor // Spanish<br>May 2015</div>
+      <br>
         
-      <div class="job-header">STUDY ABROAD, UNIVERSIDAD CARLOS III DE MADRID // Madrid, Spain<br>May 2014</div>
+      <div class="job-header">STUDY ABROAD, UNIVERSIDAD CARLOS III DE MADRID // Madrid, Spain</div>
+      <div class="text">May 2014
           <ul>
             <li>Study Abroad coursework in international business, the European Union, and Spanish language, culture and history</li>
           </ul>
+      </div>
+
   </div>
   <!--Resume Education End-->
 
@@ -80,6 +80,7 @@
   <div class="experience">
     <div class="second-header">EXPERIENCE</div>
       <div class="job-header">THE CHILDREN'S PLACE (TCP) // Secaucus, NJ<br><i>International Intern</i><br>June 2014-August 2014</div>
+      <div class="text">
           <ul>
             <li>Analyzed TCP's and global competitors' pricing information to create a template amongst international franchise partners to assess positioning in the Middle Eastern marketplace</li>
             <li>Evaluated Middle Eastern franchise sales during Ramadan, in relation to top sellers, division contribution, merchandise assortment, displays and marketing, to provide hindsight recommendations for improvement during the 2015 holiday season</li>
@@ -87,28 +88,38 @@
             <li>Developed a comprehensive business plan for TCP's entry into an international e-commerce marketplace in conjuction with the 2014 intern class for presentation to the senior leadership team</li>
             <li>Enhanced retail industry knowledge by participating in intern training sessions hosted by senior management in key departments</li>
           </ul>
+      </div>
+      <br>
 
 
     <div class="job-header">OLIN BUSINESS SCHOOL, WASHINGTON UNIVERSITY // St. Louis, MO<br><i>Teaching Assistant, Quantiative Business Analysis 120: Managerial Statistics I</i><br>September 2013-December 2013, September 2014-Present</div>
+    <div class="text">
           <ul>
             <li>Proctor and grade students' quizzes and exams to support the professor and to uphold the university's honor code of academic integrity</li>
             <li>Coordinate logistics for end-of-semester projects in order to organize student groups, preliminary research, peer evaluations and feedback</li>
           </ul>
+    </div>
+    <br>
 
     <div class="job-header">INSPIRESTL - SKANDALARIS INTERNSHIP PROGRAM // St. Louis, MO<br><i>inspireSTL is a non-profit dedicated to educating and empowering the future leaders of St. Louis through access to college-prep schooling.<br>Development and Marketing Summer Intern</i><br>June 2013-August 2013</div>
+    <div class="text">
           <ul>
             <li>Researched and organized grant opportunities, corporate and individual private donors, partnership organizations, and fundraising resources to create an extensive and diverse network of potential grantees and partners</li>
             <li>Created a development and marketing vision for the 2013-2014 fiscal year to provide a succint strategy to raise education awareness, establish brand recognition, promote recruitment of scholars, and expand fundraising efforts</li>
             <li>Developed orientation and meeting schedules and professional development plans to create a smooth transition for onboarding new employees to increase their understanding of the organization and to improve teamwork skills</li>
             <li>Strengthened entrepreneurial skills by attending speaker panels, company visits, and tours of the St. Louis neighborhoods and local startup communities, hosted by the Skandalaris Center for Entrepreneurial Studies</li>
           </ul>
+    </div>
+    <br>
 
     <div class="job-header">HOMEBRIDGE FINANCIAL SERVICES, INC. (FORMERLY REMN) // Edison, NJ<br><i>Accounting Intern</i><br>May 2012-August 2012</div>
+    <div class="text">
           <ul>
             <li>Entered billing information into proprietary databases for HomeBridge's in-house appraisal company to record payment of appraisers</li>
             <li>Updated and created templates for job descriptions for the Human Resources Department to utilize for future hiring purposes</li>
             <li>Analyzed financial data using Pivot Tables to examine the distribution of company mortgages to provide a summary to potential investors</li>
           </ul>
+    </div>
   </div>
   <!--Resume Experience End-->
   
@@ -117,9 +128,10 @@
   <!--Resume Activities Start-->
   <div class="activities-and-leadership">
     <div class="second-header">AWARDS, ACTIVITIES AND LEADERSHIP</div>
+    <div class="text">
           <ul>
             <li><i>YMA FSF Scholarship Award Winner</i> - The YMA Fashion Scholarship Fund, 2015</li>
-            <li><i>Student Worker Office Assistant</i> - Weston Career center, Olin Business School, Fall 2011-Fall 2013, Fall 2014-Present</li>
+            <li><i>Student Worker Office Assistant</i> - Weston Career Center, Olin Business School, Fall 2011-Fall 2013, Fall 2014-Present</li>
             <li><i>VP Human Resources</i> - Alpha Kappa Psi Professional Business Fraternity, Alpha Lambda Chapter, Fall 2012-Fall 2013, Fall 2014-Present
               <br>
               <ul><li>All-AKPsi Academic Team 2013-2014 and 2014-2015</li></ul></li>
@@ -129,6 +141,7 @@
             <li><i>Program Leader</i> - PALs (Promoting Active Lifestyles), Washington University in St. Louis Campus Y, Fall 2011-Fall 2013</li>
             <li><i>Internal Operations</i> - International Business Association, Olin Business School, Fall 2013</li>
           </ul>
+    </div>
   </div>
   <!--Resume Activities End-->
 
@@ -137,10 +150,12 @@
   <!--Resume Skills Start-->
   <div class="skills">
     <div class="second-header">SKILLS</div>
+    <div class="text">
           <ul>
             <li>Computer Skills: Proficient in Microsoft Office Suite</li>
             <li>Language Skills: Conversational Spanish</li>
           </ul>
+    </div>
   </div> 
   <!--Resume Skills End-->  
 
