--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
 <div class="container">
     <header>
       <div class="second-header">EVAN R. HINDES</div>
-      <div class="text">evan.hindes@wustl.edu // 908.377.9110<br>Current Address // 6805 Washington Ave, 1E // St. Louis, MO 63130<br>Permanent Address // 19 Azalea Trail // Westfield, NJ 07090</div>
+      <div class="text">evan.hindes@wustl.edu // 908.377.9110<br>CURRENT ADDRESS // 6805 Washington Ave, 1E // St. Louis, MO 63130<br>PERMANENT ADDRESS // 19 Azalea Trail // Westfield, NJ 07090</div>
     </header>
   <!--Resume Heading End-->
 
@@ -61,7 +61,7 @@
   <div class="education">
     <div class="second-header">EDUCATION</div>
       <div class="job-header">WASHINGTON UNIVERSITY IN ST. LOUIS, OLIN BUSINESS SCHOOL // St. Louis, MO</div>
-      <div class="text">Bachelor of Science in Business Administration<br>Majors // Marketing and International Business, Minor // Spanish<br>May 2015</div>
+      <div class="text">Bachelor of Science in Business Administration<br>MAJORS // Marketing and International Business, MINOR // Spanish<br>May 2015</div>
       <br>
         
       <div class="job-header">STUDY ABROAD, UNIVERSIDAD CARLOS III DE MADRID // Madrid, Spain</div>
