--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <h1>About</h1>
     <p>Evan Hindes is currently a student at Washington University in St. Louis. She is in her last year of the Olin Business School with a joint concentration in Marketing and International Business. While she was studying abroad at Universidad Carlos III in Madrid, Spain during the spring semester of her junior year, Evan had the opportunity to travel all over Europe and photograph the amazing sights around her. Using both her iPhone and Canon digital camera, her new passion for landscape photography became apparent the more she traveled. When she returned from her five months of adventure, she soon realized that she had taken thousands of photographs, mostly of the nature, landscapes and monuments in her everyday tours of cities. Now, Evan is both showcasing her photogrophy online and providing her photography services as she propels her career and passion.</p>
     <br>
-    <p><b><i>Book Evan for your next event   //</i></b>   Peruse the site and email Evan to discuss your booking. She would be happy to photograph your next event or take commissioned photography of your property or desired landscape. Individual photography prices vary by event, location and need. Evan is based in Central New Jersey and St. Louis.</p>
+    <p>BOOK EH PHOTOGRAPHY FOR YOUR NEXT EVENT   //  Peruse the site and <a href="mailto:erhindes@gmail.com?subject=Booking with EH Photography!" target="_top">EMAIL</a> Evan to discuss your booking. She would be happy to photograph your next event or take commissioned photography of your property or desired landscape. Individual photography prices vary by event, location and need. Evan is based in North Central New Jersey and St. Louis.</p>
 </div>
 <!--About End-->
 
