--- a/bookings.html
+++ b/bookings.html
@@ -47,7 +47,7 @@
 
 <div class="container">
   <h1>Bookings</h1>
-  <p>Interested in scheduling a booking with EH Photography? We are available for events and commissioned landscape shoots. Send us an <b><i><a href="mailto:erhindes@gmail.com?subject=Booking with EH Photography!" target="_top">email</a></i></b>  to learn more, or fill out the form below. We are looking forward to working with you!</p>
+  <p>Interested in scheduling a booking with EH Photography? We are available for events and commissioned landscape shoots. Send us an <a href="mailto:erhindes@gmail.com?subject=Booking with EH Photography!" target="_top">EMAIL</a>  to learn more, or fill out the form below. We are looking forward to working with you!</p>
   <div class="padding"></div>
 
   <p><div id="wufoo-m8u1hrw0ayvx7t">
